:construction: plug settings from top-banner

--- a/src/app/style.css
+++ b/src/app/style.css
@@ -5,3 +5,7 @@
 .tessael-img{
     background: url('./images/tessael.jpg');
 }
+.CodeMirror{
+    height: 100% !important;
+    padding: 0.25em !important
+}
