--- a/src/app/index.html
+++ b/src/app/index.html
@@ -4,8 +4,8 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Dashboard</title>
-    <base href="/ui/dashboard-user/">
+    <title>Exhibition Halls</title>
+    <base href="/ui/exhibition-halls/">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script id="cdn-client" src="/api/assets-gateway/raw/package/QHlvdXdvbC9jZG4tY2xpZW50/0.0.9/dist/@youwol/cdn-client.js">
     </script>
